# OpenCV-Practice

./: Background Subtraction with MOG2.cpp  Canny Edge detector.cpp  Canny Edge from Scratch.cpp  ConvecHull.cpp  DFT and IDFT.cpp  Distance Transform.cpp  Face Detection.cpp  Fast Connected Component Analysis.cpp  Filter with Laplacian from Scratch.cpp  Filter with Sobel Kernel.cpp  Find corner using goodFeature and cornerSubPix.cpp  Finding a contours.cpp  Flood Fill.cpp  Histogram of an image.cpp  Hough Circle.cpp  Hough Line.cpp  Hough Lines transform.cpp  Image Aligment Features Based.cpp  Image Segmentation.cpp  Image Stiching.cpp  InRange in HSV.cpp  Mouse Callback.cpp  Object Tracking.cpp  README.md  ROI circle.cpp  ReadWriteVideo.cpp  Seamless Cloning with Normal Cloning.cpp  SplitAndMergeSV.cpp  Text Detection.cpp  Using a mouse to draw a box in image.cpp  connectedComponent.cpp  connectedComponentWithStats.cpp  forEach.cpp  illumination normalization.cpp  seamcarving.cpp
AverageHasingforImageRetrivial/: PropertySheetOpenCV341.props  Source.cpp
GrapCut/: grapcut_bbox.py
Learning_OpenCV_with_cpp/: Background Subtraction with MOG2.cpp  Canny Edge detector.cpp  Canny Edge from Scratch.cpp  ConvecHull.cpp  DFT and IDFT.cpp  Distance Transform.cpp  Face Detection.cpp  Fast Connected Component Analysis.cpp  Filter with Laplacian from Scratch.cpp  (+24 more)
ObjectDetection/Detection/: CMakeLists.txt  Detection  Makefile
ObjectDetection/Detection/model/: car_detection.yml
ObjectDetection/Detection/src/: main.cpp
ObjectDetection/Training/: CMakeLists.txt  Makefile  Training  main.cpp  train_HOG.cpp  train_HOG.h
(+2 files in other folders)
